# Electronics

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
suppliers/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
